--- a/jupyter_notebooks/balanced_dataset_hyperparams_tunning.ipynb
+++ b/jupyter_notebooks/balanced_dataset_hyperparams_tunning.ipynb
@@ -33,13 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys; sys.path.append('..')\n",
     "from thesis_package import utils\n",
     "\n",
+    "import sklearn\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -89,18 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\jamil\\Documents\\IST\\Thesis\\new_thesis\\code\\AI-to-forecast-constraints-in-the-energy-systems\\env\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import optuna \n",
     "import os\n",
@@ -124,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,6 +611,301 @@
     "    print(\"    {}: {}\".format(key, value))\n",
     "# Write the results to a csv file.\n",
     "with open(\"./hyper_params_results/params_support_vector_regression_balanced_min_u.csv\", \"w\") as f:\n",
+    "    f.write(\"params,value\\n\")\n",
+    "    for key, value in trial.params.items():\n",
+    "        f.write(\"{},{}\\n\".format(key, value))\n",
+    "    f.write(\"value,{}\\n\".format(trial.value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extreme Gradient Boost Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Same implementation as above, but Extreme Gradient Boosting Classifier.\n",
+    "def objective(trial):\n",
+    "    # import data\n",
+    "    y_max_u_bool = pd.read_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_balanced_bool_constr.csv').drop(columns=['timestamps'])\n",
+    "    y_max_u_bool = utils.convert_df_to_bool(y_max_u_bool)\n",
+    "    exogenous_data = pd.read_csv('..\\data\\processed\\production\\exogenous_data_extended.csv').drop(columns=['date'])\n",
+    "    train_x, valid_x, train_y, valid_y, scaler = utils.split_and_suffle(exogenous_data, y_max_u_bool[utils.cols_with_positive_values(y_max_u_bool)], test_size=0.2, scaling=True)\n",
+    "    data = {'X_train': train_x,\n",
+    "            'X_test': valid_x,\n",
+    "            'y_train': train_y,\n",
+    "            'y_test': valid_y}\n",
+    "    param = {\n",
+    "        'loss': trial.suggest_categorical('loss', ['deviance', 'exponential']),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 1e-8, 1.0, log=True),\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 1, 100),\n",
+    "        'subsample': trial.suggest_float('subsample', 1e-8, 1.0, log=True),\n",
+    "        'max_depth': trial.suggest_int('max_depth', 1, 10)\n",
+    "    }\n",
+    "    model = my_ai.Context(my_ai.XGBoostClassifierStrategy(param))\n",
+    "    model.fit(data)\n",
+    "    prediction = model.predict(data)\n",
+    "    # classification performance\n",
+    "    f1_score = sklearn.metrics.f1_score(valid_y, prediction, average='macro')\n",
+    "    return f1_score\n",
+    "study = optuna.create_study(direction=\"maximize\")\n",
+    "study.optimize(objective, n_trials=num_trials)\n",
+    "print(\"Number of finished trials: \", len(study.trials))\n",
+    "print(\"Best trial:\")\n",
+    "trial = study.best_trial\n",
+    "print(\"  Value: {}\".format(trial.value))\n",
+    "print(\"  Params: \")\n",
+    "for key, value in trial.params.items():\n",
+    "    print(\"    {}: {}\".format(key, value))\n",
+    "# Write the results to a csv file.\n",
+    "with open(\"./hyper_params_results/params_xgboost_sparse_balanced_max_u.csv\", \"w\") as f:\n",
+    "    f.write(\"params,value\\n\")\n",
+    "    for key, value in trial.params.items():\n",
+    "        f.write(\"{},{}\\n\".format(key, value))\n",
+    "    f.write(\"value,{}\\n\".format(trial.value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Implement as above but for multi-output classification grandient boost classifier.\n",
+    "def objective(trial):\n",
+    "    # import data0 \n",
+    "    y_min_u_sparse_bool = pd.read_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_sparse_bool_constr.csv').drop(columns=['timestamps'])\n",
+    "    y_min_u_sparse_bool = utils.convert_df_to_sparse_bool(y_min_u_sparse_bool)\n",
+    "    exogenous_data = pd.read_csv('..\\data\\processed\\production\\exogenous_data_extended.csv').drop(columns=['date'])\n",
+    "    train_x, valid_x, train_y, valid_y, scaler = utils.split_and_suffle(exogenous_data, y_min_u_sparse_bool[utils.cols_with_positive_values(y_min_u_sparse_bool)], test_size=0.2, scaling=True)\n",
+    "    data = {'X_train': train_x,\n",
+    "            'X_test': valid_x,\n",
+    "            'y_train': train_y,\n",
+    "            'y_test': valid_y}\n",
+    "    param = {\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 10, 1000, log=True),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 0.1, 1.0, log=True) ,\n",
+    "        'loss': trial.suggest_categorical('loss', ['log_loss', 'deviance', 'exponential']) \n",
+    "    }\n",
+    "    model = my_ai.Context(my_ai.GradientBoostClassifierStrategy(param))\n",
+    "    model.fit(data)\n",
+    "    prediction = model.predict(data)\n",
+    "    # evaluate the classification performance f1 score\n",
+    "    f1_score = sklearn.metrics.f1_score(valid_y, prediction, average='micro')\n",
+    "    return f1_score\n",
+    "study = optuna.create_study(direction=\"maximize\")\n",
+    "study.optimize(objective, n_trials=num_trials)\n",
+    "print(\"Number of finished trials: \", len(study.trials))\n",
+    "print(\"Best trial:\")\n",
+    "trial = study.best_trial\n",
+    "print(\"  Value: {}\".format(trial.value))\n",
+    "print(\"  Params: \")\n",
+    "for key, value in trial.params.items():\n",
+    "    print(\"    {}: {}\".format(key, value))\n",
+    "# Write the results to a csv file.\n",
+    "with open(\"./hyper_params_results/params_gradient_boost_sparse_balanced_min_u.csv\", \"w\") as f:\n",
+    "    f.write(\"params,value\\n\")\n",
+    "    for key, value in trial.params.items():\n",
+    "        f.write(\"{},{}\\n\".format(key, value))\n",
+    "    f.write(\"value,{}\\n\".format(trial.value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grandient Boost Classifier\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Implement as above but for multi-output classification grandient boost classifier.\n",
+    "def objective(trial):\n",
+    "    # import data0 \n",
+    "    y_max_u_balanced_bool = pd.read_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_balanced_bool_constr.csv').drop(columns=['timestamps'])\n",
+    "    y_max_u_balanced_bool = utils.convert_df_to_sparse_bool(y_max_u_balanced_bool)\n",
+    "    exogenous_data = pd.read_csv('..\\data\\processed\\production\\exogenous_data_extended.csv').drop(columns=['date'])\n",
+    "    train_x, valid_x, train_y, valid_y, scaler = utils.split_and_suffle(exogenous_data, y_max_u_balanced_bool[utils.cols_with_positive_values(y_max_u_balanced_bool)], test_size=0.2, scaling=True)\n",
+    "    data = {'X_train': train_x,\n",
+    "            'X_test': valid_x,\n",
+    "            'y_train': train_y,\n",
+    "            'y_test': valid_y}\n",
+    "    param = {\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 10, 1000, log=True),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 0.1, 1.0, log=True) ,\n",
+    "        'loss': trial.suggest_categorical('loss', ['log_loss', 'deviance', 'exponential']) \n",
+    "    }\n",
+    "    model = my_ai.Context(my_ai.GradientBoostClassifierStrategy(param))\n",
+    "    model.fit(data)\n",
+    "    prediction = model.predict(data)\n",
+    "    # evaluate the classification performance f1 score\n",
+    "    f1_score = sklearn.metrics.f1_score(valid_y, prediction, average='micro')\n",
+    "    return f1_score\n",
+    "study = optuna.create_study(direction=\"maximize\")\n",
+    "study.optimize(objective, n_trials=num_trials)\n",
+    "print(\"Number of finished trials: \", len(study.trials))\n",
+    "print(\"Best trial:\")\n",
+    "trial = study.best_trial\n",
+    "print(\"  Value: {}\".format(trial.value))\n",
+    "print(\"  Params: \")\n",
+    "for key, value in trial.params.items():\n",
+    "    print(\"    {}: {}\".format(key, value))\n",
+    "# Write the results to a csv file.\n",
+    "with open(\"./hyper_params_results/params_gradient_boost_balanced_classifier_max_u.csv\", \"w\") as f:\n",
+    "    f.write(\"params,value\\n\")\n",
+    "    for key, value in trial.params.items():\n",
+    "        f.write(\"{},{}\\n\".format(key, value))\n",
+    "    f.write(\"value,{}\\n\".format(trial.value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Implement as above but for multi-output classification grandient boost classifier.\n",
+    "def objective(trial):\n",
+    "    # import data0 \n",
+    "    y_min_u_balanced_bool = pd.read_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_balanced_bool_constr.csv').drop(columns=['timestamps'])\n",
+    "    y_min_u_balanced_bool = utils.convert_df_to_sparse_bool(y_min_u_balanced_bool)\n",
+    "    exogenous_data = pd.read_csv('..\\data\\processed\\production\\exogenous_data_extended.csv').drop(columns=['date'])\n",
+    "    train_x, valid_x, train_y, valid_y, scaler = utils.split_and_suffle(exogenous_data, y_min_u_balanced_bool[utils.cols_with_positive_values(y_min_u_balanced_bool)], test_size=0.2, scaling=True)\n",
+    "    data = {'X_train': train_x,\n",
+    "            'X_test': valid_x,\n",
+    "            'y_train': train_y,\n",
+    "            'y_test': valid_y}\n",
+    "    param = {\n",
+    "        'n_estimators': trial.suggest_int('n_estimators', 10, 1000, log=True),\n",
+    "        'learning_rate': trial.suggest_float('learning_rate', 0.1, 1.0, log=True) ,\n",
+    "        'loss': trial.suggest_categorical('loss', ['log_loss', 'deviance', 'exponential']) \n",
+    "    }\n",
+    "    model = my_ai.Context(my_ai.GradientBoostClassifierStrategy(param))\n",
+    "    model.fit(data)\n",
+    "    prediction = model.predict(data)\n",
+    "    # evaluate the classification performance f1 score\n",
+    "    f1_score = sklearn.metrics.f1_score(valid_y, prediction, average='micro')\n",
+    "    return f1_score\n",
+    "study = optuna.create_study(direction=\"maximize\")\n",
+    "study.optimize(objective, n_trials=num_trials)\n",
+    "print(\"Number of finished trials: \", len(study.trials))\n",
+    "print(\"Best trial:\")\n",
+    "trial = study.best_trial\n",
+    "print(\"  Value: {}\".format(trial.value))\n",
+    "print(\"  Params: \")\n",
+    "for key, value in trial.params.items():\n",
+    "    print(\"    {}: {}\".format(key, value))\n",
+    "# Write the results to a csv file.\n",
+    "with open(\"./hyper_params_results/params_gradient_boost_balanced_classifier_min_u.csv\", \"w\") as f:\n",
+    "    f.write(\"params,value\\n\")\n",
+    "    for key, value in trial.params.items():\n",
+    "        f.write(\"{},{}\\n\".format(key, value))\n",
+    "    f.write(\"value,{}\\n\".format(trial.value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Support Vector Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Same implementation as above, but for Support Vector Classifier.\n",
+    "def objective(trial):\n",
+    "    # import data\n",
+    "    y_max_u_balanced_bool = pd.read_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_balanced_bool_constr.csv').drop(columns=['timestamps'])\n",
+    "    y_max_u_balanced_bool = utils.convert_df_to_sparse_bool(y_max_u_balanced_bool)\n",
+    "    exogenous_data = pd.read_csv('..\\data\\processed\\production\\exogenous_data_extended.csv').drop(columns=['date'])\n",
+    "    train_x, valid_x, train_y, valid_y, scaler = utils.split_and_suffle(exogenous_data, y_max_u_balanced_bool[utils.cols_with_positive_values(y_max_u_balanced_bool)], test_size=0.2, scaling=True)\n",
+    "    data = {'X_train': train_x,\n",
+    "            'X_test': valid_x,\n",
+    "            'y_train': train_y,\n",
+    "            'y_test': valid_y}\n",
+    "    param = {\n",
+    "        'kernel': trial.suggest_categorical('kernel', ['poly', 'rbf']),\n",
+    "        'C': trial.suggest_float('C', 1e-8, 1.0, log=True),\n",
+    "        'degree': trial.suggest_int('degree', 1, 5),\n",
+    "        'gamma': trial.suggest_float('gamma', 1e-8, 1.0, log=True)\n",
+    "    }\n",
+    "    model = my_ai.Context(my_ai.SupportVectorClassifierStrategy(param))\n",
+    "    model.fit(data)\n",
+    "    prediction = model.predict(data)\n",
+    "    # classification performance\n",
+    "    f1_score = sklearn.metrics.f1_score(valid_y, prediction, average='macro')\n",
+    "    return f1_score\n",
+    "study = optuna.create_study(direction=\"maximize\")\n",
+    "study.optimize(objective, n_trials=num_trials)\n",
+    "print(\"Number of finished trials: \", len(study.trials))\n",
+    "print(\"Best trial:\")\n",
+    "trial = study.best_trial\n",
+    "print(\"  Value: {}\".format(trial.value))\n",
+    "print(\"  Params: \")\n",
+    "for key, value in trial.params.items():\n",
+    "    print(\"    {}: {}\".format(key, value))\n",
+    "# Write the results to a csv file.\n",
+    "with open(\"./hyper_params_results/params_support_vector_balanced_classifier_max_u.csv\", \"w\") as f:\n",
+    "    f.write(\"params,value\\n\")\n",
+    "    for key, value in trial.params.items():\n",
+    "        f.write(\"{},{}\\n\".format(key, value))\n",
+    "    f.write(\"value,{}\\n\".format(trial.value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Same implementation as above, but for Support Vector Classifier.\n",
+    "def objective(trial):\n",
+    "    # import data\n",
+    "    y_min_u_balanced_bool = pd.read_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_min_balanced_bool_constr.csv').drop(columns=['timestamps'])\n",
+    "    y_min_u_balanced_bool = utils.convert_df_to_sparse_bool(y_min_u_balanced_bool)\n",
+    "    exogenous_data = pd.read_csv('..\\data\\processed\\production\\exogenous_data_extended.csv').drop(columns=['date'])\n",
+    "    train_x, valid_x, train_y, valid_y, scaler = utils.split_and_suffle(exogenous_data, y_min_u_balanced_bool[utils.cols_with_positive_values(y_min_u_balanced_bool)], test_size=0.2, scaling=True)\n",
+    "    data = {'X_train': train_x,\n",
+    "            'X_test': valid_x,\n",
+    "            'y_train': train_y,\n",
+    "            'y_test': valid_y}\n",
+    "    param = {\n",
+    "        'kernel': trial.suggest_categorical('kernel', ['poly', 'rbf']),\n",
+    "        'C': trial.suggest_float('C', 1e-8, 1.0, log=True),\n",
+    "        'degree': trial.suggest_int('degree', 1, 5),\n",
+    "        'gamma': trial.suggest_float('gamma', 1e-8, 1.0, log=True)\n",
+    "    }\n",
+    "    model = my_ai.Context(my_ai.SupportVectorClassifierStrategy(param))\n",
+    "    model.fit(data)\n",
+    "    prediction = model.predict(data)\n",
+    "    # classification performance\n",
+    "    f1_score = sklearn.metrics.f1_score(valid_y, prediction, average='macro')\n",
+    "    return f1_score\n",
+    "study = optuna.create_study(direction=\"maximize\")\n",
+    "study.optimize(objective, n_trials=num_trials)\n",
+    "print(\"Number of finished trials: \", len(study.trials))\n",
+    "print(\"Best trial:\")\n",
+    "trial = study.best_trial\n",
+    "print(\"  Value: {}\".format(trial.value))\n",
+    "print(\"  Params: \")\n",
+    "for key, value in trial.params.items():\n",
+    "    print(\"    {}: {}\".format(key, value))\n",
+    "# Write the results to a csv file.\n",
+    "with open(\"./hyper_params_results/params_support_vector_balanced_classifier_min_u.csv\", \"w\") as f:\n",
     "    f.write(\"params,value\\n\")\n",
     "    for key, value in trial.params.items():\n",
     "        f.write(\"{},{}\\n\".format(key, value))\n",
