now we are training again

--- a/jupyter_notebooks/balanced_dataset_hyperparams_tunning.ipynb
+++ b/jupyter_notebooks/balanced_dataset_hyperparams_tunning.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -90,18 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\jamil\\Documents\\IST\\Thesis\\new_thesis\\code\\AI-to-forecast-constraints-in-the-energy-systems\\env\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import optuna \n",
     "import os\n",
@@ -125,12 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# General parameters\n",
-    "num_trials = 1"
+    "num_trials = 50"
    ]
   },
   {
@@ -142,30 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m[I 2022-09-24 18:31:36,101]\u001b[0m A new study created in memory with name: no-name-6ea46319-e30f-4688-af34-8fb18477e09b\u001b[0m\n",
-      "\u001b[32m[I 2022-09-24 18:31:56,226]\u001b[0m Trial 0 finished with value: 0.6351793769572638 and parameters: {'booster': 'gblinear', 'lambda': 0.29845050170979454, 'alpha': 2.7660378772722877e-07, 'subsample': 0.9837454061336184, 'colsample_bytree': 0.613165704892175}. Best is trial 0 with value: 0.6351793769572638.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of finished trials:  1\n",
-      "Best trial:\n",
-      "  Value: 0.6351793769572638\n",
-      "  Params: \n",
-      "    booster: gblinear\n",
-      "    lambda: 0.29845050170979454\n",
-      "    alpha: 2.7660378772722877e-07\n",
-      "    subsample: 0.9837454061336184\n",
-      "    colsample_bytree: 0.613165704892175\n"
+      "\u001b[32m[I 2022-09-24 23:10:46,584]\u001b[0m A new study created in memory with name: no-name-d23a52c4-8e73-4b10-af94-a0cdbf8431a5\u001b[0m\n"
      ]
     }
    ],
@@ -236,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
