--- a/jupyter_notebooks/sparse_dataset_hyperparams_tunning.ipynb
+++ b/jupyter_notebooks/sparse_dataset_hyperparams_tunning.ipynb
@@ -201,7 +201,7 @@
    "outputs": [],
    "source": [
     "# General parameters\n",
-    "num_trials = 1"
+    "num_trials = 50"
    ]
   },
   {
@@ -1672,6 +1672,377 @@
    "source": [
     "import beepy\n",
     "beepy.beep(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ext_grid</th>\n",
+       "      <th>bus_1</th>\n",
+       "      <th>bus_2</th>\n",
+       "      <th>bus_3</th>\n",
+       "      <th>bus_4</th>\n",
+       "      <th>bus_5</th>\n",
+       "      <th>bus_6</th>\n",
+       "      <th>bus_7</th>\n",
+       "      <th>bus_8</th>\n",
+       "      <th>bus_9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>bus_31</th>\n",
+       "      <th>bus_17</th>\n",
+       "      <th>bus_21</th>\n",
+       "      <th>bus_24</th>\n",
+       "      <th>bus_18</th>\n",
+       "      <th>bus_23</th>\n",
+       "      <th>bus_27</th>\n",
+       "      <th>bus_32</th>\n",
+       "      <th>bus_33</th>\n",
+       "      <th>timestamps</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-01-01 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-01-01 00:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-01-01 00:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-01-01 00:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-01-01 01:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45211</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-04-15 22:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45212</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-04-15 23:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45213</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-04-15 23:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45214</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-04-15 23:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45215</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-04-15 23:45:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>45216 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ext_grid  bus_1  bus_2  bus_3  bus_4  bus_5  bus_6  bus_7  bus_8  \\\n",
+       "0             0      0      0      0      0      0      0      0      0   \n",
+       "1             0      0      0      0      0      0      0      0      0   \n",
+       "2             0      0      0      0      0      0      0      0      0   \n",
+       "3             0      0      0      0      0      0      0      0      0   \n",
+       "4             0      0      0      0      0      0      0      0      0   \n",
+       "...         ...    ...    ...    ...    ...    ...    ...    ...    ...   \n",
+       "45211         0      0      0      0      0      0      0      0      0   \n",
+       "45212         0      0      0      0      0      0      0      0      0   \n",
+       "45213         0      0      0      0      0      0      0      0      0   \n",
+       "45214         0      0      0      0      0      0      0      0      0   \n",
+       "45215         0      0      0      0      0      0      0      0      0   \n",
+       "\n",
+       "       bus_9  ...  bus_31  bus_17  bus_21  bus_24  bus_18  bus_23  bus_27  \\\n",
+       "0          0  ...       0       0       0       0       0       0       0   \n",
+       "1          0  ...       0       0       0       0       0       0       0   \n",
+       "2          0  ...       0       0       0       0       0       0       0   \n",
+       "3          0  ...       0       0       0       0       0       0       0   \n",
+       "4          0  ...       0       0       0       0       0       0       0   \n",
+       "...      ...  ...     ...     ...     ...     ...     ...     ...     ...   \n",
+       "45211      0  ...       0       0       0       0       0       0       0   \n",
+       "45212      0  ...       0       0       0       0       0       0       0   \n",
+       "45213      0  ...       0       0       0       0       0       0       0   \n",
+       "45214      0  ...       0       0       0       0       0       0       0   \n",
+       "45215      0  ...       0       0       0       0       0       0       0   \n",
+       "\n",
+       "       bus_32  bus_33           timestamps  \n",
+       "0           0       0  2020-01-01 00:00:00  \n",
+       "1           0       0  2020-01-01 00:15:00  \n",
+       "2           0       0  2020-01-01 00:30:00  \n",
+       "3           0       0  2020-01-01 00:45:00  \n",
+       "4           0       0  2020-01-01 01:00:00  \n",
+       "...       ...     ...                  ...  \n",
+       "45211       0       0  2021-04-15 22:45:00  \n",
+       "45212       0       0  2021-04-15 23:00:00  \n",
+       "45213       0       0  2021-04-15 23:15:00  \n",
+       "45214       0       0  2021-04-15 23:30:00  \n",
+       "45215       0       0  2021-04-15 23:45:00  \n",
+       "\n",
+       "[45216 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('..\\data\\ground_truth\\\\res_bus_vm_pu_max_sparse_bool_constr.csv')"
    ]
   }
  ],
